# pipauto

./: .gitignore  Cargo.toml  Makefile  README.md  dev.sh  docker-compose.yaml  local-database-2025-04-04.surql  local-database-2025-04-05.surql  local-database-2025-05-17.surql  local-database-2025-06-05.surql  tailwind.config.js  tailwindcss
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs
crates/repository/: Cargo.toml
crates/saas/: Cargo.toml
crates/templating/: Cargo.toml
crates/templating/src/: error.rs  lib.rs
crates/templating/src/cars/: car_list_template.rs  mod.rs
crates/templating/src/client/: client_create_template.rs  client_update_template.rs  mod.rs
crates/templating/src/client/details/: client_details_cars_tab.rs  client_details_history_tab.rs  client_details_tab.rs  mod.rs
crates/templating/src/clients/: clients_list_template.rs  clients_table_template.rs  mod.rs
crates/templating/src/home/: mod.rs
crates/templating/templates/: client_update.html  clients.html
documentations/database/: README.md
src/: error.rs  main.rs
src/common/: address.rs  email.rs  mod.rs  phone.rs  year.rs
src/entity/: car.rs  client.rs  intervention.rs  mod.rs
src/handler/: error.rs  mod.rs
src/repositoty/: error.rs  mod.rs
src/routes/: mod.rs
templates/: _layout.html  cars.html  client.html  client_create.html  client_details_page.html  client_tab_cars.html  client_tab_details.html  client_tab_history.html  client_tabs.html  client_update.html  clients.html  clients_table.html  clients_table_pagination.html  home.html  output.css
(+72 files in other folders)
