[package]
name = "pipauto"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
chrono = "0.4.40"
derive_more = {version = "2.0", features = ["full"]}
faker_rand = "0.1"
rand = "0.8"
rusty-money = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
surrealdb = "2.0"
thiserror = "1.0"
tokio = "1.40"
