[package]
name = "pipauto"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13"
askama-enum = "0.0.2"
askama_web = "0.13.0"
axum = {version = "0.8", features = ["form"]}
axum-macros = "0.5.0"
chrono = "0.4"
derive_more = {version = "2.0", features = ["full"]}
faker_rand = "0.1"
rand = "0.8"
rust_decimal = "1.37.1"
rusty-money = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27"
strum_macros = "0.27"
surrealdb = "2.0"
thiserror = "1.0"
tokio = "1.40"
tower-http = {version = "0.6.2", features= ["fs"]}
