[package]
name = "templating"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27"
strum_macros = "0.27"
derive_more = {version = "2.0", features = ["full"]}

askama = "0.13"
askama-enum = "0.0.2"
askama_web = "0.13.0"

common = { path = "../common"}
